--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "jest": "^25.1.0",
+    "mongodb-memory-server": "^6.5.2",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
