--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "dagdun <dagdun@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "./node_modules/typescript/bin/tsc --allowJs --outDir ./dist && node_modules/nodemon/bin/nodemon.js ./dist/server.js",
-    "test": "jest --testTimeout=10000 --watch"
+    "dev": "./node_modules/typescript/bin/tsc --outDir ./dist --watch & node_modules/nodemon/bin/nodemon.js ./dist/server.js",
+    "test": "./node_modules/typescript/bin/tsc --outDir ./dist && jest --watch"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,10 +16,18 @@
     "mongoose": "^5.9.5"
   },
   "devDependencies": {
-    "jest": "^25.1.0",
+    "@types/express": "^4.17.11",
+    "@types/express-serve-static-core": "^4.17.18",
+    "@types/jest": "^26.0.20",
+    "@types/mongoose": "^5.10.3",
+    "@types/node": "^14.14.20",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
     "mongodb-memory-server": "^6.5.2",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
